# dextr

./: .gitignore  pyproject.toml
apps/: funding.py  liqs_orig.py  settings.ini
educational/: huge_trades.py  hyperliquid_func.py  hyperliquid_indicators.py  hyperliquid_risk.py  hyperliquid_testnet_bot.py  hyperliquid_testnet_funcs.py  orders.py  phemex_risk.py  recent_trades.py
